--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^6.2.2"
+  },
+  "dependencies": {
+    "chai-http": "^4.3.0",
+    "express": "^4.17.1"
   }
 }
